--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 /* Global Variables */
 
 :root{
-    --primary:#218838;
+    --primary:#04BE51;
     --light:#fff;
     --secondary:#E8242E;
     --dark:#1D1D1D;
@@ -14,6 +14,11 @@
     font-family: monsterrat;
     src: url(../fonts/Montserrat-VariableFont_wght.ttf);
   }
+
+@font-face {
+    font-family: great-vibes;
+    src: url(../fonts/GreatVibes-Regular.ttf);
+}
 /* Custom Font  */
 
 /* Resets */
@@ -63,13 +68,15 @@ table {
 body{
     font-family:'monsterrat', sans-serif!important;
 }
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: none;
+}
 
 /* Header  */
     /* Nav  */
-    nav{
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-        position: fixed;
-    }
 
     .nav-link{
         text-transform: uppercase;
@@ -90,12 +97,15 @@ body{
     .nav-link:hover{
         color: var(--primary)!important;
     }
+      
     /* Nav  */
     /* Hero-slider */
-    section.section.hero-slider{
+    section.section.hero .hero-slider{
         height: calc(100vh - 91px);
+        width: 100%;
     }
-    section.section.hero-slider .single-slide{
+    section.section.hero .hero-slider .single-slide{
+        position: relative;
         height: 100%;
         width: 100%;
         display: flex;
@@ -103,20 +113,193 @@ body{
         justify-content: center;
         align-items: center;
     }
-    section.section.hero-slider .single-slide.slide-1{
+    section.section.hero .hero-slider .single-slide::before{
+        content: '';
+        width: 100%;
+        height: 100%;
+        background-color: var(--dark);
+        opacity: .3;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+    section.section.hero .hero-slider .single-slide.slide-1{
         background-image: url(../img/hero-slider/1.jpg);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
     }
-    section.section.hero-slider .single-slide .slide-title{
+    section.section.hero .hero-slider .single-slide .slide-title{
         color: var(--light);
+        font-family: 'great-vibes', sans-serif;
+        font-size: 4rem;
+        z-index: 2;
     }
-    section.section.hero-slider .single-slide .slide-desc{
+    section.section.hero .hero-slider .single-slide .slide-desc{
         color: var(--light);
+        z-index: 2;
+        font-size: 4rem;
+        font-weight: 800;
+        text-align: center;
+        margin: 2rem 0;
     }
+    section.section.hero .hero-slider .single-slide .btn.slide-btn{
+        border: 2px solid #fff;
+        color: var(--light);
+        z-index: 2;
+        font-size: 1.1rem;
+        transition: all .25s ease-in-out;
+        padding: .5rem 3rem;
+    }
+    section.section.hero .hero-slider .single-slide .btn.slide-btn:hover{
+        border-color: transparent;
+        background-color: var(--primary);
+    }
+    section.section.hero .container.search-box {
+        background-color: var(--light);
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+        position: relative;
+        top: -40px;
+        z-index: 2;
+    }
+
     /* Hero-slider */
+    
 /* Header  */
+/* Story section */
+section.section.story{
+    position: relative;
+    z-index: 2;
+}
+section.section.story::before{
+    content: '';
+    background-image: url(../img/1.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 15vw;
+    height: 100%;
+    display: block;
+    z-index: 1;
+}
+section.section.story .container{
+    padding: 2rem;
+    z-index: 2;
+}
+section.section.story .container .row.story-inner .col-md-7 .section-title{
+    text-align: center;
+}
+section.section.story .container .row.story-inner .col-md-7 .section-title .curve-title{
+    font-family: 'great-vibes';
+    font-size: 3rem;
+    margin-bottom: .5rem;
+}
+section.section.story .container .row.story-inner .col-md-7 .section-title .big-title{
+    font-weight: 800;
+    font-size: 3rem;
+}
+section.section.story .container .row.story-inner .col-md-7 .story-text{
+    text-align: center;
+    line-height: 1.5;
+    margin-bottom: 3rem;
+    font-weight: 500;
+}
+section.section.story .container .row.story-inner .col-md-7 .simple_btn{
+    background-color: var(--primary);
+    color: var(--light);
+    padding: 1rem 2rem;
+    transition: all .25s ease-in-out;
+}
+section.section.story .container .row.story-inner .col-md-7 .simple_btn:hover{
+    background-color: #0ca04a;
+}
+/* Story section */
+
+/* Offer Section  */
+
+section.section.offers{
+    padding-bottom: 2rem;
+}
+section.section.offers .section-head .section-title{
+    font-family: 'great-vibes', sans-serif;
+    padding-top: 4rem;
+    margin-bottom: 1rem;
+    font-size: 4rem;
+}
+section.section.offers .section-head .section-desc{
+    font-weight: 800;
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+
+.product-card-wrapper .col-md-3 .single-product-card{
+    background-color: var(--light);
+    border: .5px solid rgba(0, 0, 0, 0.1);
+    transition: all .5s ease-in-out;
+    padding-bottom: 2rem;
+}
+.product-card-wrapper .col-md-3 .single-product-card:hover{
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+.product-card-wrapper .col-md-3 .single-product-card .product-img{
+    padding: .5rem;
+    margin-bottom: .5rem;
+}
+.product-card-wrapper .col-md-3 .single-product-card .product-img img{
+    width: 100%;
+}
+.product-card-wrapper .col-md-3 .single-product-card .prouduct-desc{
+    margin-bottom: 2rem;
+}
+.product-card-wrapper .col-md-3 .single-product-card .prouduct-desc h2{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+}
+.product-card-wrapper .col-md-3 .single-product-card .add-btn{
+    background-color: transparent;
+    color: grey;
+    border: .2px solid grey;
+    padding: .5rem 1rem;
+    transition: .25s all ease-in-out;
+}
+
+.product-card-wrapper .col-md-3 .single-product-card:hover .add-btn{
+    border-color: var(--primary);
+    color: var(--primary);
+}
+.product-card-wrapper .col-md-3 .single-product-card .add-btn:hover{
+    background-color: var(--primary);
+    color: var(--light);
+    border-color: transparent;
+}
+/* Offer Section  */
+
+/* Preloader */
+.preloader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: #ffffff;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-image: url(../img/loader.gif);
+}
+/* Preloader */
+
+/* Global */
+
+section.section{
+    margin-bottom: 3rem;
+}
+
+/* Global */
 
 /* Utilities */
 
@@ -126,5 +309,21 @@ background-color: var(--primary);
 .bg-my-dark{
     background-color: var(--dark);
 }
-
+.btn-my-primary{
+    color: var(--light);
+    z-index: 2;
+    font-size: 1.1rem;
+    transition: all .25s ease-in-out;
+    background-color: var(--primary);
+    padding: .3rem 2rem;
+    width: 100%;
+}
+.btn-my-primary:hover{
+    color: var(--light);
+    background-color: #0ca04a;
+}
+.form-control{
+    border-radius: 0!important;
+    outline: var(--primary);
+}
 /* Utilities */
